--- a/public/assets/dashboard/css/layout.css
+++ b/public/assets/dashboard/css/layout.css
@@ -1,5 +1,6 @@
 /** GERAL **/
-.card {
+.company .card,
+.category .card {
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -7,12 +8,7 @@ table button {
     width: 100%;
     max-width: 75px;
 }
-.table th, table td {
-    text-align: center;
-}
-.table td {
-    vertical-align: initial;
-}
+
 
 table tr:hover {
     background-color: rgba(0,0,0,.1) !important;
@@ -31,14 +27,14 @@ table tr:hover {
 .card .card-header {
     height: 50px;
 }
-.card .card-header .input-group {
+.card .card-header .search-area {
     max-width: 300px;
     height: 38px;
     position: absolute;
     right: 15px;
     top: calc(19px - 25%);
 }
-.card .card-header .input-group button {
+.card .card-header .search-area button {
     position: absolute;
     right: 0;
     z-index: 10;
@@ -58,4 +54,8 @@ form .card label {
 
 form .img-area img {
     max-width: 400px;
+}
+
+.email-area ul li a.active {
+    color: #007bff!important;
 }
