--- a/public/assets/website/css/layout.css
+++ b/public/assets/website/css/layout.css
@@ -1,4 +1,8 @@
 /* GERAL */
+:root {
+    --primary-color: #1A3586;
+    --secondary-color: #4A73DC;
+}
 body {
     background-color: #ffffff;
     color: #000000;
@@ -24,9 +28,93 @@ header {
     left: 0;
     z-index: 10000;
     background: transparent;
+    transition: all ease .5s;
+    background: transparent;
+    filter: none;
 }
-.mobile-menu {
+header.header-appear {
+    background: linear-gradient(90deg, #1A3586 28.16%, #1A3586 40%, #4166D5 82.63%, #4A73DC 89.09%);
+    filter: drop-shadow(0px 6px 8px rgba(26, 53, 134, 0.95));
+}
+header .mobile-menu {
     display: none;
+}
+header .mobile-menu .navigation {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(90deg, #1A3586 28.16%, #1A3586 40%, #4166D5 82.63%, #4A73DC 89.09%);
+    padding: 0 30px;
+}
+header .mobile-menu .navigation .logo {
+    width: 100%;
+    max-width: 184px;
+}
+header .mobile-menu .navigation .logo img {
+    width: 100%;
+}
+header .mobile-menu .navigation button {
+    background: none;
+    color: #ffffff;
+    border: none;
+    font-size: 40px;
+}
+header .mobile-menu .navigation button .icon-button {
+    transition: all ease .5s;
+}
+header .mobile-menu .navigation button .off {
+    display: none;
+}
+
+header .mobile-menu nav {
+    position: fixed;
+    top: 0;
+    left: -80%;
+    width: 80%;
+    height: 100vh;
+    background: linear-gradient(90deg, #1A3586 28.16%, #1A3586 40%, #4166D5 82.63%, #4A73DC 89.09%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: ease .5s;
+}
+header .mobile-menu .open {
+    left: 0;
+}
+header .mobile-menu nav ul li {
+    margin-bottom: 15px;
+}
+header .mobile-menu nav ul li a {
+    font-size: 30px;
+    color: #ffffff;
+    position: relative;
+}
+header .mobile-menu nav ul li .active {
+    font-weight: bold;
+}
+header .mobile-menu nav ul li .active::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: -3px;
+    border-radius: 2px;
+    background: #ffffff;
+    transform: scale3d(1,1,1);
+}
+header .mobile-menu nav ul li .active::after {
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 3px;
+    left: 25%;
+    bottom: -8px;
+    border-radius: 2px;
+    background: #ffffff;
+    transform: scale3d(1,1,1);
 }
 header .desktop-menu {
     width: 100%;
@@ -36,6 +124,13 @@ header .desktop-menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+header .desktop-menu .logo {
+    width: 100%;
+    max-width: 184px;
+}
+header .desktop-menu .logo img {
+    width: 100%;
 }
 header .desktop-menu nav ul {
     width: 100%;
@@ -112,10 +207,10 @@ header .desktop-menu nav ul li .active::after {
     transform: scale3d(1,1,1);
 }
 @media (max-width: 760px) {
-    .desktop-menu {
+    header .desktop-menu {
         display: none;
     }
-    .mobile-menu {
+    header .mobile-menu {
         display: flex;
     }
 }
