--- a/public/assets/website/css/home.css
+++ b/public/assets/website/css/home.css
@@ -201,6 +201,7 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     overflow: hidden;
+    max-height: 170px;
 }
 .highlights .content .card-highlights .card-highlights-header .link {
     position: absolute;
