--- a/public/assets/website/css/layout.css
+++ b/public/assets/website/css/layout.css
@@ -19,6 +19,9 @@ a:hover {
 li {
     list-style: none;
 }
+.highlights {
+    overflow-x: hidden !important;
+}
 /* END GERAL */
 /* HEADER */
 header {
