--- a/public/assets/website/css/layout.css
+++ b/public/assets/website/css/layout.css
@@ -8,6 +8,7 @@ body {
     color: #000000;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 * {
     outline: 0;
