--- a/public/assets/website/css/layout.css
+++ b/public/assets/website/css/layout.css
@@ -256,6 +256,12 @@ footer .links {
     justify-content: space-between;
     align-items: center;
 }
+@media (max-width: 760px) {
+    footer .links {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
 footer .links ul {
     padding: 0;
     margin: 0;
@@ -284,6 +290,11 @@ footer .copy-area p {
 }
 footer .copy-area span {
     margin-left: 40px;
+}
+@media (max-width: 760px) {
+    footer .copy-area span {
+        margin-left: 0;
+    }
 }
 footer .copy-area span a {
     color: var(--primary-color);
